--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-plugin-object-assign": "^1.2.1",
     "babelify": "^6.1.3",
     "browserify-middleware": "^7.0.0",
+    "connect-mongo": "^1.3.2",
     "i18n": "^0.8.3",
     "keystone": "^0.3.13",
     "keystone-rest-api": "^0.9.8",
