--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "browserify-middleware": "^7.0.0",
     "connect-mongo": "^1.3.2",
     "i18n": "^0.8.3",
-    "keystone": "^0.3.13",
+    "keystone": "^4.0.0-beta.1",
     "keystone-rest-api": "^0.9.8",
     "keystone-social-login": "github:johnnyestilles/keystone-social-login",
     "model-transform": "^1.1.0",
