--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "connect-mongo": "^1.3.2",
     "i18n": "^0.8.3",
     "keystone": "^4.0.0-beta.1",
-    "keystone-rest-api": "^0.9.8",
     "keystone-social-login": "github:johnnyestilles/keystone-social-login",
     "model-transform": "^1.1.0",
     "react": "^15.4.2",
@@ -25,7 +24,8 @@
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "node keystone.js"
+    "start": "node keystone.js",
+    "preinstall": "printf '%s\\0' modules/*/ | xargs -0 -L1 bash -c 'npm install --ignore-scripts --prefix \"$1\" \"$1\"'"
   },
   "main": "keystone.js"
 }
