--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "node keystone.js",
-    "preinstall": "printf '%s\\0' modules/*/ | xargs -0 -L1 bash -c 'npm install --ignore-scripts --prefix \"$1\" \"$1\"'"
+    "preinstall": "printf '%s' modules/*/ | xargs -0 -L1 bash -c 'npm install --ignore-scripts --prefix \"$1\"'"
   },
   "main": "keystone.js"
 }
