--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
     "start": "node keystone.js",
-    "preinstall": "printf '%s' modules/*/ | xargs -0 -L1 bash -c 'npm install --ignore-scripts --prefix \"$1\"'"
+    "preinstall": "printf '%s' ./modules/*/ | xargs -0 -L1 bash -c 'echo \"\n\\033[0;34mInstalling modules in\\033[0m: $0\n\" && npm install --ignore-scripts --prefix \"$0\" \"$0\"'"
   },
   "main": "keystone.js"
 }
